+ Removed Deprecated ChatColor and Lore Usage + Changed Item Cooldown